--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,7 +22,7 @@
       <ul id="nav-mobile" class="side-nav">
         <li><a href="#">Inicio</a></li>
       </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">Menú</i></a>
+      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
   </nav>
 
@@ -41,7 +41,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="vcerratoa.github.io/weblog/background1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="https://github.com/vcerratoa/weblog/blob/gh-pages/background1.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 
