--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Ceevee - Free Responsive HTML5/CSS3 Template</title>
+	<title>Víctor Luis Cerrato Segovia</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -44,31 +44,30 @@
 	      <a class="mobile-btn" href="#" title="Hide navigation">Hide navigation</a>
 
          <ul id="nav" class="nav">
-            <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
-            <li><a class="smoothscroll" href="#about">About</a></li>
+            <li class="current"><a class="smoothscroll" href="#home">Inicio</a></li>
+            <li><a class="smoothscroll" href="#about">Sobre mí</a></li>
 	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
-            <li><a class="smoothscroll" href="#portfolio">Works</a></li>
-            <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
-            <li><a class="smoothscroll" href="#contact">Contact</a></li>
+            <li><a class="smoothscroll" href="#portfolio">Trabajos</a></li>
+            <li><a class="smoothscroll" href="#testimonials">Testimonios</a></li>
+            <li><a class="smoothscroll" href="#contact">Contacto</a></li>
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">I'm Jonathan Doe.</h1>
-            <h3>I'm a Manila based <span>graphic designer</span>, <span>illustrator</span> and <span>webdesigner</span> creating awesome and
-            effective visual identities for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
-            and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
+            <h1 class="responsive-headline">Soy Víctor Luis Cerrato Segovia.</h1>
+            <h3>Actualmente soy <span>técnico en equipos electrónicos de consumo</span>, <span>técnico superior en desarrollo de productos electrónicos</span> y estoy estudiando <span>grado en ingeniería informática en ingeniería del software</span> en la universidad de extremadura. Echa un vistazo <a class="smoothscroll" href="#about">bajando la página</a>
+            y aprende más <a class="smoothscroll" href="#about">sobre mí</a>.</h3>
             <hr />
             <ul class="social">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="https://facebook.com/viclucese"><i class="fa fa-facebook"></i></a></li>
+               <li><a href="https://twitter.com/viclucese"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="https://www.google.com/+V%C3%ADctorLuisCerratoSegovia90"><i class="fa fa-google-plus"></i></a></li>
+               <li><a href="https://es.linkedin.com/pub/víctor-luis-cerrato-segovia/63/543/19a"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://instagram.com/viclucese/"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="#"><i class="fa fa-aboutme"></i></a></li>
+               <!--<li><a href="#"><i class="fa fa-skype"></i></a></li>-->
             </ul>
          </div>
       </div>
@@ -94,7 +93,7 @@
 
          <div class="nine columns main-col">
 
-            <h2>About Me</h2>
+            <h2>Sobre Mí</h2>
 
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
             eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
@@ -108,21 +107,21 @@
 
                <div class="columns contact-details">
 
-                  <h2>Contact Details</h2>
+                  <h2>Detalles de Contacto</h2>
                   <p class="address">
-						   <span>Jonathan Doe</span><br>
+						   <span>Víctor Luis Cerrato Segovia</span><br>
 						   <span>1600 Amphitheatre Parkway<br>
 						         Mountain View, CA 94043 US
                      </span><br>
-						   <span>(123)456-7890</span><br>
-                     <span>anyone@website.com</span>
+						   <span>666 666 666</span><br>
+                     <span>viclucese@outlook.es</span>
 					   </p>
 
                </div>
 
                <div class="columns download">
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="#" class="button"><i class="fa fa-download"></i>Descargar resumen</a>
                   </p>
                </div>
 
@@ -144,7 +143,7 @@
       <div class="row education">
 
          <div class="three columns header-col">
-            <h1><span>Education</span></h1>
+            <h1><span>Educación</span></h1>
          </div>
 
          <div class="nine columns main-col">
@@ -153,8 +152,8 @@
 
                <div class="twelve columns">
 
-                  <h3>University of Life</h3>
-                  <p class="info">Master in Graphic Design <span>&bull;</span> <em class="date">April 2007</em></p>
+                  <h3>Universidad de Extremadura</h3>
+                  <p class="info">Grado en Ingeniería Informática en Ingeniería del Software<span>&bull;</span> <em class="date">Desde Sept 2014</em></p>
 
                   <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -171,8 +170,8 @@
 
                <div class="twelve columns">
 
-                  <h3>School of Cool Designers</h3>
-                  <p class="info">B.A. Degree in Graphic Design <span>&bull;</span> <em class="date">March 2003</em></p>
+                  <h3>Técnico en Equipos Electrónicos de Consumo</h3>
+                  <p class="info">I.E.S. Cuatro Caminos<span>&bull;</span> <em class="date">2010-2012</em></p>
 
                   <p>
                   This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
@@ -195,7 +194,7 @@
       <div class="row work">
 
          <div class="three columns header-col">
-            <h1><span>Work</span></h1>
+            <h1><span>Trabajo</span></h1>
          </div>
 
          <div class="nine columns main-col">
@@ -204,8 +203,8 @@
 
                <div class="twelve columns">
 
-                  <h3>Awesome Design Studio</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+                  <h3>Prácticas en Electromedicina Extremeña</h3>
+                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">Marzo - Junio 2014</em></p>
 
                   <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -222,8 +221,8 @@
 
                <div class="twelve columns">
 
-                  <h3>Super Cool Studio</h3>
-                  <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
+                  <h3>Prácticas en Copiadoras del Guadiana</h3>
+                  <p class="info">UX Designer <span>&bull;</span> <em class="date">Marzo - Junio 2012</em></p>
 
                   <p>
                   This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
@@ -246,7 +245,7 @@
       <div class="row skill">
 
          <div class="three columns header-col">
-            <h1><span>Skills</span></h1>
+            <h1><span>Habilidades</span></h1>
          </div>
 
          <div class="nine columns main-col">
