Eliminadas secciones sobrantes

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                <li><a href="https://www.google.com/+V%C3%ADctorLuisCerratoSegovia90"><i class="fa fa-google-plus"></i></a></li>
                <li><a href="https://es.linkedin.com/pub/víctor-luis-cerrato-segovia/63/543/19a"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://instagram.com/viclucese/"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-aboutme"></i></a></li>
-               <!--<li><a href="#"><i class="fa fa-skype"></i></a></li>-->
+               <!--<li><a href="#"><i class="fa fa-aboutme"></i></a></li>
+               <li><a href="#"><i class="fa fa-skype"></i></a></li>-->
             </ul>
          </div>
       </div>
@@ -278,7 +278,7 @@
 
    <!-- Portfolio Section
    ================================================== -->
-   <section id="portfolio">
+   <!--<section id="portfolio">
 
       <div class="row">
 
@@ -286,7 +286,7 @@
 
             <h1>Check Out Some of My Works.</h1>
 
-            <!-- portfolio-wrapper -->
+            <!-- portfolio-wrapper 
             <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
 
           	   <div class="columns portfolio-item">
@@ -304,7 +304,7 @@
                      </a>
 
                   </div>
-          		</div> <!-- item end -->
+          		</div> <!-- item end 
 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -321,7 +321,7 @@
                      </a>
 
                   </div>
-          		</div> <!-- item end -->
+          		</div> <!-- item end 
 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -338,7 +338,7 @@
                      </a>
 
                   </div>
-          		</div> <!-- item end -->
+          		</div> <!-- item end 
 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -355,7 +355,7 @@
                      </a>
 
                   </div>
-          		</div> <!-- item end -->
+          		</div> <!-- item end 
 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -372,7 +372,7 @@
                      </a>
 
                   </div>
-          		</div> <!-- item end -->
+          		</div> <!-- item end 
 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -389,7 +389,7 @@
                      </a>
 
                   </div>
-          		</div> <!-- item end -->
+          		</div> <!-- item end 
 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -406,7 +406,7 @@
                      </a>
 
                   </div>
-          		</div> <!-- item end -->
+          		</div> <!-- item end 
 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -423,15 +423,15 @@
                      </a>
 
                   </div>
-          		</div>  <!-- item end -->
+          		</div>  <!-- item end 
 
-            </div> <!-- portfolio-wrapper end -->
+            </div> <!-- portfolio-wrapper end 
 
-         </div> <!-- twelve columns end -->
+         </div> <!-- twelve columns end 
 
 
          <!-- Modal Popup
-	      --------------------------------------------------------------- -->
+	      --------------------------------------------------------------- 
 
          <div id="modal-01" class="popup-modal mfp-hide">
 
@@ -448,7 +448,7 @@
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-01 End -->
+	      </div><!-- modal-01 End 
 
          <div id="modal-02" class="popup-modal mfp-hide">
 
@@ -465,7 +465,7 @@
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-02 End -->
+	      </div><!-- modal-02 End 
 
          <div id="modal-03" class="popup-modal mfp-hide">
 
@@ -482,7 +482,7 @@
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-03 End -->
+	      </div><!-- modal-03 End 
 
          <div id="modal-04" class="popup-modal mfp-hide">
 
@@ -499,7 +499,7 @@
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-04 End -->
+	      </div><!-- modal-04 End
 
          <div id="modal-05" class="popup-modal mfp-hide">
 
@@ -516,7 +516,7 @@
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-05 End -->
+	      </div><!-- modal-05 End
 
          <div id="modal-06" class="popup-modal mfp-hide">
 
@@ -533,7 +533,7 @@
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-06 End -->
+	      </div><!-- modal-06 End 
 
          <div id="modal-07" class="popup-modal mfp-hide">
 
@@ -550,7 +550,7 @@
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-07 End -->
+	      </div><!-- modal-07 End 
 
          <div id="modal-08" class="popup-modal mfp-hide">
 
@@ -567,17 +567,17 @@
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-01 End -->
+	      </div><!-- modal-01 End 
 
 
-      </div> <!-- row End -->
+      </div> <!-- row End 
 
    </section> <!-- Portfolio Section End-->
 
 
    <!-- Call-To-Action Section
    ================================================== -->
-   <section id="call-to-action">
+   <!--<section id="call-to-action">
 
       <div class="row">
 
@@ -592,9 +592,9 @@
             <h2><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Host This Template on Dreamhost.</a></h2>
             <p>Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
 					Get <span>$50 off</span> when you sign up with the promocode <span>STYLESHOUT</span>. 
-					<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. --></p>
+					<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. </p>
 
-         </div>
+    <!--     </div>
 
          <div class="three columns action">
 
@@ -617,7 +617,7 @@
 
             <div class="two columns header-col">
 
-               <h1><span>Client Testimonials</span></h1>
+               <h1><span>Testimonios de los clientes</span></h1>
 
             </div>
 
@@ -668,7 +668,7 @@
 
             <div class="two columns header-col">
 
-               <h1><span>Get In Touch.</span></h1>
+               <h1><span>Ponte en contacto.</span></h1>
 
             </div>
 
@@ -692,7 +692,7 @@
 					<fieldset>
 
                   <div>
-						   <label for="contactName">Name <span class="required">*</span></label>
+						   <label for="contactName">Nombre <span class="required">*</span></label>
 						   <input type="text" value="" size="35" id="contactName" name="contactName">
                   </div>
 
@@ -702,17 +702,17 @@
                   </div>
 
                   <div>
-						   <label for="contactSubject">Subject</label>
+						   <label for="contactSubject">Asunto</label>
 						   <input type="text" value="" size="35" id="contactSubject" name="contactSubject">
                   </div>
 
                   <div>
-                     <label for="contactMessage">Message <span class="required">*</span></label>
+                     <label for="contactMessage">Mensaje <span class="required">*</span></label>
                      <textarea cols="50" rows="15" id="contactMessage" name="contactMessage"></textarea>
                   </div>
 
                   <div>
-                     <button class="submit">Submit</button>
+                     <button class="submit">Enviar</button>
                      <span id="image-loader">
                         <img alt="" src="images/loader.gif">
                      </span>
@@ -722,16 +722,16 @@
 				   </form> <!-- Form End -->
 
                <!-- contact-warning -->
-               <div id="message-warning"> Error boy</div>
+               <div id="message-warning"> Error</div>
                <!-- contact-success -->
 				   <div id="message-success">
-                  <i class="fa fa-check"></i>Your message was sent, thank you!<br>
+                  <i class="fa fa-check"></i>Su mensaje ha sido enviado, gracias!<br>
 				   </div>
 
             </div>
 
 
-            <aside class="four columns footer-widgets">
+            <!--<aside class="four columns footer-widgets">
 
                <div class="widget widget_contact">
 
@@ -770,7 +770,7 @@
 
 		         </div>
 
-            </aside>
+            </aside>-->
 
       </div>
 
