--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">Soy Víctor Luis Cerrato Segovia.</h1>
+            <h1 class="responsive-headline">Víctor L. Cerrato Segovia</h1>
             <h3>Actualmente soy <span>técnico en equipos electrónicos de consumo</span>, <span>técnico superior en desarrollo de productos electrónicos</span> y estoy estudiando <span>grado en ingeniería informática en ingeniería del software</span> en la universidad de extremadura. Echa un vistazo <a class="smoothscroll" href="#about">bajando la página</a>
             y aprende más <a class="smoothscroll" href="#about">sobre mí</a>.</h3>
             <hr />
@@ -153,7 +153,7 @@
                <div class="twelve columns">
 
                   <h3>Universidad de Extremadura</h3>
-                  <p class="info">Grado en Ingeniería Informática en Ingeniería del Software<span>&bull;</span> <em class="date">Desde Sept 2014</em></p>
+                  <p class="info">Grado en Ingeniería Informática en Ingeniería del Software<span>&bull;</span> <em class="date">Desde Septiembre 2014</em></p>
 
                   <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -204,7 +204,7 @@
                <div class="twelve columns">
 
                   <h3>Prácticas en Electromedicina Extremeña</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">Marzo - Junio 2014</em></p>
+                  <p class="info">Reparando instrumentos de electromedicina<span>&bull;</span> <em class="date">Marzo - Junio 2014</em></p>
 
                   <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -222,7 +222,7 @@
                <div class="twelve columns">
 
                   <h3>Prácticas en Copiadoras del Guadiana</h3>
-                  <p class="info">UX Designer <span>&bull;</span> <em class="date">Marzo - Junio 2012</em></p>
+                  <p class="info">Reparando impresoras<span>&bull;</span> <em class="date">Marzo - Junio 2012</em></p>
 
                   <p>
                   This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
@@ -786,18 +786,18 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="https://facebook.com/viclucese"><i class="fa fa-facebook"></i></a></li>
+               <li><a href="https://twitter.com/viclucese"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="https://www.google.com/+V%C3%ADctorLuisCerratoSegovia90"><i class="fa fa-google-plus"></i></a></li>
+               <li><a href="https://es.linkedin.com/pub/víctor-luis-cerrato-segovia/63/543/19a"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://instagram.com/viclucese/"><i class="fa fa-instagram"></i></a></li>
+               <!--<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+               <li><a href="#"><i class="fa fa-skype"></i></a></li>-->
             </ul>
 
             <ul class="copyright">
                <li>&copy; Copyright 2014 CeeVee</li>
-               <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>   
+               <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a>, modificado por Víctor Luis Cerrato Segovia</li>   
             </ul>
 
          </div>
