Refinando antes de introducir textos

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          <ul id="nav" class="nav">
             <li class="current"><a class="smoothscroll" href="#home">Inicio</a></li>
             <li><a class="smoothscroll" href="#about">Sobre mí</a></li>
-	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
+	         <li><a class="smoothscroll" href="#resume">Mi CV</a></li>
             <li><a class="smoothscroll" href="#portfolio">Trabajos</a></li>
             <li><a class="smoothscroll" href="#testimonials">Testimonios</a></li>
             <li><a class="smoothscroll" href="#contact">Contacto</a></li>
@@ -56,7 +56,7 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">Víctor L. Cerrato Segovia</h1>
+            <h1 class="responsive-headline">Víctor L. Cerrato</h1>
             <h3>Actualmente soy <span>técnico en equipos electrónicos de consumo</span>, <span>técnico superior en desarrollo de productos electrónicos</span> y estoy estudiando <span>grado en ingeniería informática en ingeniería del software</span> en la universidad de extremadura. Echa un vistazo <a class="smoothscroll" href="#about">bajando la página</a>
             y aprende más <a class="smoothscroll" href="#about">sobre mí</a>.</h3>
             <hr />
