Cambio en background, cambio en html

--- a/index.html
+++ b/index.html
@@ -95,33 +95,26 @@
 
             <h2>Sobre Mí</h2>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p>Mi madre me compraba ciertas chocolatinas con una sorpresa dentro, cuando esa sorpresa estaba algo más trabajada que ahora.
+            Supongo que de ahí me vendrán las ganas de montar y desmontar cosas. De la parte de la chocolatina me vienen las ganas de hacer deporte
+            de vez en cuando. Simple pero meticuloso. 
             </p>
 
-            <div class="row">
+            <!--<div class="row">
 
                <div class="columns contact-details">
 
                   <h2>Detalles de Contacto</h2>
                   <p class="address">
-						   <span>Víctor Luis Cerrato Segovia</span><br>
-						   <span>1600 Amphitheatre Parkway<br>
-						         Mountain View, CA 94043 US
-                     </span><br>
-						   <span>666 666 666</span><br>
-                     <span>viclucese@outlook.es</span>
+						   <span>Víctor Luis Cerrato Segovia</span>
+						   <span>viclucese@outlook.es</span>
 					   </p>
 
                </div>
 
                <div class="columns download">
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Descargar resumen</a>
+                     <a href="#contact" class="button">Contacta conmigo</a>
                   </p>
                </div>
 
@@ -156,10 +149,25 @@
                   <p class="info">Grado en Ingeniería Informática en Ingeniería del Software<span>&bull;</span> <em class="date">Desde Septiembre 2014</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                  Actualmente la última etapa educativa que estoy cursando, aunque falte el máster para ser 
+                  completamente ingeniero informático en ingeniería del software. Uno de mis sueños de pequeño, 
+                  trabajar en la informática, se puede convertir en realidad.
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Técnico superior en Desarrollo de Productos Electrónicos</h3>
+                  <p class="info">I.E.S. Cuatro Caminos<span>&bull;</span> <em class="date">2012-2014</em></p>
+
+                  <p>
+                  No podía quedarme quieto y decidí seguir formándome en lo que me gusta. Siempre me apasionó
+                  la electrónica, cualquier cacharro, y saber como funcionan a este nivel es muy gratificante.
                   </p>
 
                </div>
@@ -174,10 +182,8 @@
                   <p class="info">I.E.S. Cuatro Caminos<span>&bull;</span> <em class="date">2010-2012</em></p>
 
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                  La Formación Profesional no es una mala opción. De no "servir" para estudiar lo típico, a 
+                  estar completamente centrado en un sólo tema. No está nada mal.
                   </p>
 
                </div>
@@ -207,10 +213,11 @@
                   <p class="info">Reparando instrumentos de electromedicina<span>&bull;</span> <em class="date">Marzo - Junio 2014</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                  Como parte de la formación del Ciclo Formativo de Grado Superior en Desarrollo de Productos Electrónicos realicé 
+                  practicas en el <a href="http://saludextremadura.gobex.es/directorio/areassalud/donbenito-vvaserena">Hospital Don Benito-Villanueva</a>
+                  apoyado en la empresa <a href="http://www.electromedicina.me/">Electromedicina Extremeña, S.L.</a>. La empresa para la que
+                  realicé las prácticas estaba encargada de todo el equipo de electromedicina de un hospital, desde desfibriladores, pasando por televisores, endoscopios
+                  o reivisiones de aparatos electrónicos de quirófanos.
                   </p>
 
                </div>
@@ -225,10 +232,9 @@
                   <p class="info">Reparando impresoras<span>&bull;</span> <em class="date">Marzo - Junio 2012</em></p>
 
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                  Como parte de la formación del Ciclo Formativo de Grado medio en Equipos Electrónicos de Consumo realicé 
+                  practicas en la empresa <a href="http://www.copiadorasguadiana.com/">Copiadoras del Guadiana</a>
+                  donde realicé reparaciones, instalaciones y mantenimiento de diversos tipos de impresoras y fotocopiadoras.
                   </p>
 
                </div>
@@ -617,7 +623,7 @@
 
             <div class="two columns header-col">
 
-               <h1><span>Testimonios de los clientes</span></h1>
+               <h1><span>Citas Célebres</span></h1>
 
             </div>
 
@@ -644,6 +650,14 @@
                            nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
                            </p>
                            <cite>Mr. Adobe</cite>
+                        </blockquote>
+                     </li> <!-- slide ends -->
+
+                      <li>
+                        <blockquote>
+                           <p>If in doubt, flat out.
+                           </p>
+                           <cite>Colin McRae</cite>
                         </blockquote>
                      </li> <!-- slide ends -->
 
@@ -674,9 +688,7 @@
 
             <div class="ten columns">
 
-                  <p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                  eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-                  voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                  <p class="lead">¿Necesitas un técnico electrónico? ¿Necesitas un programador? ¿Necesitas a alguien que te diseñe una web sencilla? Si necesitas algo de eso, o simplemente quieres ponerte en contacto conmigo, utiliza este formulario.
                   </p>
 
             </div>
@@ -796,7 +808,7 @@
             </ul>
 
             <ul class="copyright">
-               <li>&copy; Copyright 2014 CeeVee</li>
+               <li>&copy; Copyright 2015 Víctor Luis Cerrato Segovia</li>
                <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a>, modificado por Víctor Luis Cerrato Segovia</li>   
             </ul>
 
