--- a/index.html
+++ b/index.html
@@ -256,10 +256,8 @@
 
          <div class="nine columns main-col">
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt.
+            <p>Como buen hijo de trabajadores, trabajé en la construcción unos años con mi padre, por lo que habilidades 
+            a la hora de construir no son extrañas para mí.
             </p>
 
 				<div class="bars">
