--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
 
       <!-- Work
       ----------------------------------------------- -->
+      <section id="portfolio">
       <div class="row work">
 
          <div class="three columns header-col">
@@ -633,21 +634,17 @@
 
                      <li>
                         <blockquote>
-                           <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is
-                           to do what you believe is great work. And the only way to do great work is to love what you do.
-                           If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
+                           <p>La libertad comienza allí donde acaba la ignorancia.
                            </p>
-                           <cite>Steve Jobs</cite>
+                           <cite>Víctor Hugo</cite>
                         </blockquote>
                      </li> <!-- slide ends -->
 
                      <li>
                         <blockquote>
-                           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                           Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                           nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+                           <p>Nadie es libre. Hasta los pájaros están encadenados al cielo.
                            </p>
-                           <cite>Mr. Adobe</cite>
+                           <cite>Bob Dylan</cite>
                         </blockquote>
                      </li> <!-- slide ends -->
 
