--- a/index.html
+++ b/index.html
@@ -784,6 +784,53 @@
    </section> <!-- Contact Section End-->
 
 
+   <!--//BLOQUE COOKIES-->
+<div id="barraaceptacion">
+   <div class="inner">
+      Solicitamos su permiso para obtener datos estad&iacute;sticos de su navegaci&oacute;n en esta web, en cumplimiento del Real Decreto-ley 13/2012. Si contin&uacute;a navegando consideramos que acepta el uso de cookies.
+      <a href="javascript:void(0);" class="ok" onclick="PonerCookie();"><b>OK</b></a> | 
+      <a href="http://politicadecookies.com" target="_blank" class="info">M&aacute;s informaci&oacute;n</a>
+   </div>
+</div>
+
+<script>
+function getCookie(c_name){
+   var c_value = document.cookie;
+   var c_start = c_value.indexOf(" " + c_name + "=");
+   if (c_start == -1){
+      c_start = c_value.indexOf(c_name + "=");
+   }
+   if (c_start == -1){
+      c_value = null;
+   }else{
+      c_start = c_value.indexOf("=", c_start) + 1;
+      var c_end = c_value.indexOf(";", c_start);
+      if (c_end == -1){
+         c_end = c_value.length;
+      }
+      c_value = unescape(c_value.substring(c_start,c_end));
+   }
+   return c_value;
+}
+
+function setCookie(c_name,value,exdays){
+   var exdate=new Date();
+   exdate.setDate(exdate.getDate() + exdays);
+   var c_value=escape(value) + ((exdays==null) ? "" : "; expires="+exdate.toUTCString());
+   document.cookie=c_name + "=" + c_value;
+}
+
+if(getCookie('tiendaaviso')!="1"){
+   document.getElementById("barraaceptacion").style.display="block";
+}
+function PonerCookie(){
+   setCookie('tiendaaviso','1',365);
+   document.getElementById("barraaceptacion").style.display="none";
+}
+</script>
+<!--//FIN BLOQUE COOKIES-->
+
+
    <!-- footer
    ================================================== -->
    <footer>
