--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li><a class="smoothscroll" href="#about">Sobre mí</a></li>
 	         <li><a class="smoothscroll" href="#resume">Mi CV</a></li>
             <li><a class="smoothscroll" href="#portfolio">Trabajos</a></li>
-            <li><a class="smoothscroll" href="#testimonials">Testimonios</a></li>
+            <li><a class="smoothscroll" href="#testimonials">Habilidades</a></li>
             <li><a class="smoothscroll" href="#contact">Contacto</a></li>
          </ul> <!-- end #nav -->
 
@@ -249,6 +249,7 @@
 
       <!-- Skills
       ----------------------------------------------- -->
+      <section id="testimonials">
       <div class="row skill">
 
          <div class="three columns header-col">
@@ -277,7 +278,7 @@
 			</div> <!-- main-col end -->
 
       </div> <!-- End skills -->
-
+</section>
    </section> <!-- Resume Section End-->
 
 
@@ -614,7 +615,7 @@
 
    <!-- Testimonials Section
    ================================================== -->
-   <section id="testimonials">
+   <!--<section id="testimonials">->
 
       <div class="text-container">
 
